[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/heart.png" type="Texture" id=2]
[ext_resource path="res://Assets/Kenney Mini Square Mono.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HeartContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -207.661
margin_top = 17.3529
margin_right = -17.6606
margin_bottom = 57.3529
custom_constants/separation = 10
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Heart1" type="TextureRect" parent="HeartContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -499.301, -75.4414 )
texture = ExtResource( 2 )

[node name="Heart2" type="TextureRect" parent="HeartContainer"]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -499.301, -75.4414 )
texture = ExtResource( 2 )

[node name="Heart3" type="TextureRect" parent="HeartContainer"]
margin_left = 100.0
margin_right = 140.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -499.301, -75.4414 )
texture = ExtResource( 2 )

[node name="Heart4" type="TextureRect" parent="HeartContainer"]
visible = false
margin_left = 150.0
margin_right = 190.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -499.301, -75.4414 )
texture = ExtResource( 2 )

[node name="EnemyCount" type="HBoxContainer" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 235.0
margin_bottom = 45.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="EnemyLabel" type="Label" parent="EnemyCount"]
margin_right = 198.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( -554.848, -123.75 )
custom_fonts/font = SubResource( 1 )
text = "ENEMY LEFT:"

[node name="EnemyLeft" type="Label" parent="EnemyCount"]
margin_left = 202.0
margin_right = 238.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( -554.848, -123.75 )
custom_fonts/font = SubResource( 2 )
text = "18"

[node name="TimerContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -119.0
margin_top = 16.0181
margin_right = -7.0
margin_bottom = 46.0181
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="TimerContainer"]
margin_right = 108.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( -554.848, -123.75 )
custom_fonts/font = SubResource( 1 )
text = "TIMER:"

[node name="Timer" type="Label" parent="TimerContainer"]
margin_left = 112.0
margin_right = 148.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( -554.848, -123.75 )
custom_fonts/font = SubResource( 2 )
text = "60"
